<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:text="@string/insert_data" />

    <Button
        android:id="@+id/btnRetrieveAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnInsert"
        android:layout_marginTop="16dp"
        android:text="@string/retrieve_all_users" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/btnRetrieveAll"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/enter_user_id"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRetrieveById"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserId"
        android:layout_marginTop="16dp"
        android:text="@string/retrieve_user_by_id" />

    <TextView
        android:id="@+id/textViewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRetrieveById"
        android:layout_marginTop="16dp"
        android:text="@string/data_will_be_displayed_here"
        android:textSize="18sp" />

</RelativeLayout>
